testData/diagnostics/base_pp.diag.txt
testData/diagnostics/base_pp.nut line = (1) column = (0) : error: argument of inc/dec operation is not assiangable
base++
^---

